[gd_scene load_steps=11 format=3 uid="uid://cdahpgerwm8dy"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_gyjmc"]
[ext_resource type="Texture2D" uid="uid://bnnbp47k5xa7j" path="res://Assets/kenney_platformer-art-extended-enemies/Alien sprites/alienBeige_walk1.png" id="1_u5xcp"]
[ext_resource type="PackedScene" uid="uid://bnjew01mh4xnl" path="res://Scenes/bullet.tscn" id="2_8vfeq"]
[ext_resource type="Texture2D" uid="uid://j16c5pseril6" path="res://Assets/kenney_platformer-art-extended-enemies/Alien sprites/alienBeige_hurt.png" id="2_haitr"]
[ext_resource type="Texture2D" uid="uid://yeods11m1lff" path="res://Assets/kenney_platformer-art-extended-enemies/Alien sprites/alienBeige_walk2.png" id="2_tr3ga"]
[ext_resource type="Texture2D" uid="uid://dypv0aph3i8sd" path="res://Assets/kenney_platformer-art-extended-enemies/Alien sprites/alienBeige_clean1.png" id="3_suweb"]
[ext_resource type="Texture2D" uid="uid://ctap5ou4r781t" path="res://Assets/kenney_platformer-art-extended-enemies/Alien sprites/alienBeige_clean2.png" id="4_0w25p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e1m3d"]
radius = 22.0
height = 88.0

[sub_resource type="SpriteFrames" id="SpriteFrames_1rvy4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_suweb")
}, {
"duration": 1.0,
"texture": ExtResource("4_0w25p")
}],
"loop": true,
"name": &"clean",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_haitr")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_u5xcp")
}, {
"duration": 1.0,
"texture": ExtResource("2_tr3ga")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjo7s"]
size = Vector2(131.5, 125.5)

[node name="Player" type="Area2D"]
script = ExtResource("1_gyjmc")
Bullet = ExtResource("2_8vfeq")
metadata/_edit_group_ = true

[node name="clean_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_e1m3d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1rvy4")
animation = &"clean"

[node name="Muzzle" type="Marker2D" parent="."]

[node name="cleanup_zone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="cleanup_zone"]
position = Vector2(43, -14)
shape = SubResource("RectangleShape2D_kjo7s")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="clean_cooldown" to="." method="_on_clean_cooldown_timeout"]
[connection signal="body_entered" from="cleanup_zone" to="." method="_on_cleanup_zone_body_entered"]
